version/0.40/_sources/api/solver/_autosummary/settings/p2d_model_settings.rst.txt
:orphan:

.. _p2d_model_settings:

p2d_model_settings
==================

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.p2d_model_settings
    :show-inheritance:

.. rubric:: Attributes

==================================================================   ==========================================================================

Attribute                                                                                                                               Summary

==================================================================   ==========================================================================
:ref:`initial_soc <initial_soc_1>`                                                                                Initial SOC in the P2D model.

:ref:`ref_capacity <ref_capacity_2>`                                                                     Theoretical capacity in the P2D model.

:ref:`anode_thickness <anode_thickness>`                                                         Negative electrode thickness in the P2D model.

:ref:`anode_n_grid <anode_n_grid>`                                                  Number of grid in negative electrode zone in the P2D model.

:ref:`anode_size_ratio <anode_size_ratio>`                                                                  Grid ratio for Ln in the P2D model.

:ref:`anode_p_diameter <anode_p_diameter>`                                            Particle diameter in negative electrode in the P2D model.

:ref:`anode_specific_area <anode_specific_area>`                                          Specific area in negative Electrode in the P2D model.

:ref:`anode_n_sphere <anode_n_sphere>`                                     Number of grids across radius of particle at anode in the P2D model.

:ref:`anode_size_ratio_r <anode_size_ratio_r>`                                                              Grid ratio for rn in the P2D model.

:ref:`anode_cs_max <anode_cs_max>`                                                              Max. solid Li+ conc. at anode in the P2D model.

:ref:`anode_stio_0 <anode_stio_0>`                                                                       Stoi. at 0% at anode in the P2D model.

:ref:`anode_stio_100 <anode_stio_100>`                                                                 Stoi. at 100% at anode in the P2D model.

:ref:`anode_ce_0 <anode_ce_0>`                                                                 Electrolyte Li+ conc. in anode in the P2D model.

:ref:`anode_vof <anode_vof>`                                             Volume fraction of electrolyte in negative electrode in the P2D model.

:ref:`anode_filler_f <anode_filler_f>`                                                  Filler fraction in negative electrode in the P2D model.

:ref:`anode_ds <anode_ds>`                                                        Lithium mass diffusivity in anode particles in the P2D model.

:ref:`anode_ed <anode_ed>`                                                                        Activation energy for diff- in the P2D model.

:ref:`anode_brugg <anode_brugg>`                                                  Bruggeman coefficient of negative electrode in the P2D model.

:ref:`anode_trans_efficiency <anode_trans_efficiency>`                             Transport efficiency of negative electrode in the P2D model.

:ref:`anode_sigma <anode_sigma>`                                                         Solid electric conductivity in anode in the P2D model.

:ref:`anode_i0 <anode_i0_1>`                                                         Ref. rate constant in negative electrode in the P2D model.

:ref:`anode_er <anode_er>`                                                                          Activation energy for Er- in the P2D model.

:ref:`anode_alpha_a <anode_alpha_a_1>`                                                        Anodic transfer coeff. at anode in the P2D model.

:ref:`anode_alpha_c <anode_alpha_c_1>`                                                      Cathodic Transfer Coeff. at anode in the P2D model.

:ref:`anode_ocv <anode_ocv_1>`                                                                      Ocp in negative electrode in the P2D model.

:ref:`anode_entropic_coef <anode_entropic_coef>`                                                   DUdT in negative electrode in the P2D model.

:ref:`cathode_thickness <cathode_thickness>`                                                     Positive electrode thickness in the P2D model.

:ref:`cathode_n_grid <cathode_n_grid>`                                              Number of grid in positive electrode zone in the P2D model.

:ref:`cathode_size_ratio <cathode_size_ratio>`                                                              Grid ratio for Lp in the P2D model.

:ref:`cathode_p_diameter <cathode_p_diameter>`                                        Particle diameter in positive Electrode in the P2D model.

:ref:`cathode_specific_area <cathode_specific_area>`                                      Specific area in positive Electrode in the P2D model.

:ref:`cathode_n_sphere <cathode_n_sphere>`                               Number of grids across radius of particle at cathode in the P2D model.

:ref:`cathode_size_ratio_r <cathode_size_ratio_r>`                                                          Grid ratio for rp in the P2D model.

:ref:`cathode_cs_max <cathode_cs_max>`                                                        Max. solid Li+ conc. at cathode in the P2D model.

:ref:`cathode_stio_0 <cathode_stio_0>`                                                                 Stoi. at 0% at cathode in the P2D model.

:ref:`cathode_stio_100 <cathode_stio_100>`                                                           Stoi. at 100% at cathode in the P2D model.

:ref:`cathode_ce_0 <cathode_ce_0>`                                                           Electrolyte Li+ conc. in cathode in the P2D model.

:ref:`cathode_vof <cathode_vof>`                                         Volume fraction of electrolyte in positive electrode in the P2D model.

:ref:`cathode_filler_f <cathode_filler_f>`                                              Filler fraction in positive electrode in the P2D model.

:ref:`cathode_ds <cathode_ds>`                                                  Lithium mass diffusivity in cathode particles in the P2D model.

:ref:`cathode_ed <cathode_ed>`                                                                    Activation energy for diff+ in the P2D model.

:ref:`cathode_brugg <cathode_brugg>`                                              Bruggeman coefficient of positive electrode in the P2D model.

:ref:`cathode_trans_efficiency <cathode_trans_efficiency>`                         Transport efficiency of positive electrode in the P2D model.

:ref:`cathode_sigma <cathode_sigma>`                                                   Solid electric conductivity in cathode in the P2D model.

:ref:`cathode_i0 <cathode_i0_1>`                                                     Ref. rate constant in positive electrode in the P2D model.

:ref:`cathode_er <cathode_er>`                                                                     Activation energy for Er+. in the P2D model.

:ref:`cathode_alpha_a <cathode_alpha_a_1>`                                                  Anodic transfer coeff. at cathode in the P2D model.

:ref:`cathode_alpha_c <cathode_alpha_c_1>`                                                Cathodic transfer coeff. at cathode in the P2D model.

:ref:`cathode_ocv <cathode_ocv_1>`                                                                  Ocp in positive electrode in the P2D model.

:ref:`cathode_entropic_coef <cathode_entropic_coef>`                                               DUdT in positive electrode in the P2D model.

:ref:`electrolyte_thickness <electrolyte_thickness>`                                                      Separator thickness in the P2D model.

:ref:`electrolyte_n_grid <electrolyte_n_grid>`                                               Number of grid in separator zone in the P2D model.

:ref:`electrolyte_ce_0 <electrolyte_ce_0>`                                                 Electrolyte Li+ conc. in separator in the P2D model.

:ref:`electrolyte_vof <electrolyte_vof>`                                          Volume fraction of electrolyte in separator in the P2D model.

:ref:`electrolyte_brugg <electrolyte_brugg>`                                               Bruggeman coefficient of separator in the P2D model.

:ref:`electrolyte_trans_efficiency <electrolyte_trans_efficiency>`                          Transport efficiency of separator in the P2D model.

:ref:`electrolyte_de <electrolyte_de>`                                                        Mass diffusivity of electrolyte in the P2D model.

:ref:`electrolyte_de_act <electrolyte_de_act>`                                  Activation energy for electrolyte diffusivity in the P2D model.

:ref:`electrolyte_t_plus <electrolyte_t_plus>`                                                         Transference number t+ in the P2D model.

:ref:`electrolyte_sigma <electrolyte_sigma>`                                                Ionic conductivity in electrolyte in the P2D model.

:ref:`electrolyte_sigma_act <electrolyte_sigma_act>`                                 Activation energy for ionic conductivity in the P2D model.

:ref:`electrolyte_activity <electrolyte_activity>`                                                  Electrolyte activity-term in the P2D model.

:ref:`analytical_cs <analytical_cs>`                                                                        Use analytical cs in the P2D model.

:ref:`analytical_cs_order <analytical_cs_order>`                                                            Cs function order in the P2D model.

:ref:`aging_model_enabled <aging_model_enabled_1>`                                                         Enable aging model in the P2D model.

:ref:`aging_file <aging_file>`                                                                                Aging file name in the P2D model.

:ref:`aging_profile <aging_profile>`                                                                    Aging effects profile in the P2D model.

==================================================================   ==========================================================================

.. rubric:: Methods

========================================================================   ====================================

Method                                                                                                  Summary

========================================================================   ====================================
:ref:`import_properties_from_bpx_file <import_properties_from_bpx_file>`       Command object to read BPX file.

========================================================================   ====================================

.. rubric:: Included in:

========================   ===========================

Parent                                         Summary

========================   ===========================
:ref:`battery <battery>`       Battery model settings.

========================   ===========================

